# gloox

./: CMakeLists.txt  config.h.win
src/: CMakeLists.txt  tlsopensslbase.cpp
