
cmake_minimum_required (VERSION 2.8)

set(GLOOX_INCLUDE adhoc.h
                  adhoccommandprovider.h
                  adhochandler.h
                  adhocplugin.h
                  amp.h
                  annotations.h
                  annotationshandler.h
                  atomicrefcount.h
                  attention.h
                  base64.h
                  bookmarkhandler.h
                  bookmarkstorage.h
                  bytestream.h
                  bytestreamdatahandler.h
                  bytestreamhandler.h
                  capabilities.h
                  carbons.h
                  chatstate.h
                  chatstatefilter.h
                  chatstatehandler.h
                  client.h
                  clientbase.h
                  component.h
                  compressionbase.h
                  compressiondatahandler.h
                  compressiondefault.h
                  compressionzlib.h
                  connectionbase.h
                  connectionbosh.h
                  connectiondatahandler.h
                  connectionhandler.h
                  connectionhttpproxy.h
                  connectionlistener.h
                  connectionsocks5proxy.h
                  connectiontcpbase.h
                  connectiontcpclient.h
                  connectiontcpserver.h
                  connectiontls.h
                  connectiontlsserver.h
                  dataform.h
                  dataformfield.h
                  dataformfieldcontainer.h
                  dataformitem.h
                  dataformreported.h
                  delayeddelivery.h
                  disco.h
                  discohandler.h
                  disconodehandler.h
                  dns.h
                  error.h
                  event.h
                  eventdispatcher.h
                  eventhandler.h
                  featureneg.h
                  flexoff.h
                  flexoffhandler.h
                  forward.h
                  gloox.h
                  glooxversion.h
                  gpgencrypted.h
                  gpgsigned.h
                  inbandbytestream.h
                  instantmucroom.h
                  iodata.h
                  iq.h
                  iqhandler.h
                  jid.h
                  jinglecontent.h
                  jinglefiletransfer.h
                  jingleiceudp.h
                  jingleplugin.h
                  jinglepluginfactory.h
                  jinglesession.h
                  jinglesessionhandler.h
                  jinglesessionmanager.h
                  lastactivity.h
                  lastactivityhandler.h
                  linklocal.h
                  linklocalclient.h
                  linklocalhandler.h
                  linklocalmanager.h
                  loghandler.h
                  logsink.h
                  macros.h
                  md5.h
                  message.h
                  messageevent.h
                  messageeventfilter.h
                  messageeventhandler.h
                  messagefilter.h
                  messagehandler.h
                  messagesession.h
                  messagesessionhandler.h
                  mucinvitationhandler.h
                  mucmessagesession.h
                  mucroom.h
                  mucroomconfighandler.h
                  mucroomhandler.h
                  mutex.h
                  mutexguard.h
                  nickname.h
                  nonsaslauth.h
                  oob.h
                  parser.h
                  prep.h
                  presence.h
                  presencehandler.h
                  privacyitem.h
                  privacylisthandler.h
                  privacymanager.h
                  privatexml.h
                  privatexmlhandler.h
                  pubsub.h
                  pubsubevent.h
                  pubsubitem.h
                  pubsubmanager.h
                  pubsubresulthandler.h
                  receipt.h
                  registration.h
                  registrationhandler.h
                  resource.h
                  rosteritem.h
                  rosteritemdata.h
                  rosterlistener.h
                  rostermanager.h
                  search.h
                  searchhandler.h
                  sha.h
                  shim.h
                  sihandler.h
                  simanager.h
                  siprofileft.h
                  siprofilefthandler.h
                  siprofilehandler.h
                  socks5bytestream.h
                  socks5bytestreammanager.h
                  socks5bytestreamserver.h
                  softwareversion.h
                  stanza.h
                  stanzaextension.h
                  stanzaextensionfactory.h
                  statisticshandler.h
                  subscription.h
                  subscriptionhandler.h
                  tag.h
                  taghandler.h
                  tlsbase.h
                  tlsdefault.h
                  tlsgnutlsbase.h
                  tlsgnutlsclient.h
                  tlsgnutlsclientanon.h
                  tlsgnutlsserveranon.h
                  tlshandler.h
                  tlsopensslbase.h
                  tlsopensslclient.h
                  tlsopensslserver.h
                  tlsschannel.h
                  uniquemucroom.h
                  util.h
                  vcard.h
                  vcardhandler.h
                  vcardmanager.h
                  vcardupdate.h
                  xhtmlim.h
)

set(GLOOX_SRC adhoc.cpp
              amp.cpp
              annotations.cpp
              atomicrefcount.cpp
              attention.cpp
              base64.cpp
              bookmarkstorage.cpp
              capabilities.cpp
              carbons.cpp
              chatstate.cpp
              chatstatefilter.cpp
              client.cpp
              clientbase.cpp
              component.cpp
              compressiondefault.cpp
              compressionzlib.cpp
              connectionbosh.cpp
              connectionhttpproxy.cpp
              connectionsocks5proxy.cpp
              connectiontcpbase.cpp
              connectiontcpclient.cpp
              connectiontcpserver.cpp
              connectiontls.cpp
              connectiontlsserver.cpp
              dataform.cpp
              dataformfield.cpp
              dataformfieldcontainer.cpp
              dataformitem.cpp
              dataformreported.cpp
              delayeddelivery.cpp
              disco.cpp
              dns.cpp
              error.cpp
              eventdispatcher.cpp
              featureneg.cpp
              flexoff.cpp
              forward.cpp
              gloox.cpp
              gpgencrypted.cpp
              gpgsigned.cpp
              inbandbytestream.cpp
              instantmucroom.cpp
              iodata.cpp
              iq.cpp
              jid.cpp
              jinglecontent.cpp
              jinglefiletransfer.cpp
              jingleiceudp.cpp
              jinglepluginfactory.cpp
              jinglesession.cpp
              jinglesessionmanager.cpp
              lastactivity.cpp
              linklocalclient.cpp
              linklocalmanager.cpp
              logsink.cpp
              md5.cpp
              message.cpp
              messageevent.cpp
              messageeventfilter.cpp
              messagefilter.cpp
              messagesession.cpp
              mucinvitationhandler.cpp
              mucmessagesession.cpp
              mucroom.cpp
              mutex.cpp
              nickname.cpp
              nonsaslauth.cpp
              oob.cpp
              parser.cpp
              prep.cpp
              presence.cpp
              privacyitem.cpp
              privacymanager.cpp
              privatexml.cpp
              pubsubevent.cpp
              pubsubitem.cpp
              pubsubmanager.cpp
              receipt.cpp
              registration.cpp
              rosteritem.cpp
              rostermanager.cpp
              search.cpp
              sha.cpp
              shim.cpp
              simanager.cpp
              siprofileft.cpp
              socks5bytestream.cpp
              socks5bytestreammanager.cpp
              socks5bytestreamserver.cpp
              softwareversion.cpp
              stanza.cpp
              stanzaextensionfactory.cpp
              subscription.cpp
              tag.cpp
              tlsdefault.cpp
              tlsgnutlsbase.cpp
              tlsgnutlsclient.cpp
              tlsgnutlsclientanon.cpp
              tlsgnutlsserveranon.cpp
              tlsopensslbase.cpp
              tlsopensslclient.cpp
              tlsopensslserver.cpp
              tlsschannel.cpp
              uniquemucroom.cpp
              util.cpp
              vcard.cpp
              vcardmanager.cpp
              vcardupdate.cpp
              xhtmlim.cpp
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

if (WIN32)
  list(APPEND GLOOX_INCLUDE "../config.h.win")
  add_definitions(-DWIN32 -D_WIN32 -D DLL_EXPORT)
  set(GLOOX_RES "version.rc")
else()
  list(APPEND GLOOX_INCLUDE "../config.h.unix.in")
endif()       

include_directories(${GLOOX_INCLUDE})

add_library (gloox SHARED ${GLOOX_SRC} ${GLOOX_RES})
target_link_libraries(gloox ${SSL_LIBRARY} ${CRYPTO_LIBRARY})

